--- a/app/src/main/res/layout/item_favoritos.xml
+++ b/app/src/main/res/layout/item_favoritos.xml
@@ -40,4 +40,12 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/btnSacarFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:src="@android:drawable/ic_delete"
+        android:background="@android:color/transparent"/>
+
 </LinearLayout>
